--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="centered div-container">
-        <div class="div-element">
+        <div class="div-element-first">
             <mat-form-field appearance="fill">
                 <mat-label>Year</mat-label>
                 <mat-select (selectionChange)="setYear($event.value)" [value]="selectedYear">
