--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -4,8 +4,8 @@
   <div class="container">
     <h3 class="uploadHeading " style="color:#56baed;">Objects</h3>
     <input type="file" #objectFileDropRef (change)="uploadObjectsFile($event)" id="objectFileDropRef" hidden />
-<BR>
-   <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
+    <BR>
+    <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
 
     <label for="objectFileDropRef" class="browseButton" *ngIf="isObjectsEmpty">Browse</label>
     <button mat-button color="warn" *ngIf="!isObjectsEmpty" (click)="deleteObjects()">Delete objects</button>
@@ -14,7 +14,7 @@
       <br>
       <label for="download-obj-template">Download template</label>
     </div>
-<br>
+    <br>
     <div *ngIf="isObjLoading"
       style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: transparent;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
@@ -27,9 +27,9 @@
     <input type="file" #positionFileDropRef (change)="uploadPositionsFile($event)" id="positionFileDropRef" hidden />
 
     <BR>
-   <!--<h3 style="margin:5%; color:#56baed;">Drag and drop file here</h3>-->
-   <label for="positionFileDropRef" class="browseButton" *ngIf="isPositionsEmpty">Browse</label>
-   <label class="browseButton" *ngIf="!isPositionsEmpty" (click)="exportPositions()">Export</label>
+    <!--<h3 style="margin:5%; color:#56baed;">Drag and drop file here</h3>-->
+    <label for="positionFileDropRef" class="browseButton" *ngIf="isPositionsEmpty">Browse</label>
+    <label class="browseButton" *ngIf="!isPositionsEmpty" (click)="exportPositions()">Export</label>
     <button mat-button color="warn" *ngIf="!isPositionsEmpty" (click)="deletePositions()">Delete positions</button>
 
     <div class="download-template">
@@ -39,78 +39,72 @@
     </div>
     <br>
     <div *ngIf="isPosLoading"
-    style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white; background: transparent;">
-    <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
-    </mat-progress-spinner>
-  </div>
-    <div class="check">
+      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white; background: transparent;">
+      <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
+      </mat-progress-spinner>
+    </div>
+    <div class="check" style="margin-left: -200% ;">
       <h4>Export options:</h4>
       <br>
       <mat-checkbox class="example-margin" color="primary" (change)="checkWithImages($event)">With images</mat-checkbox>
     </div>
 
-<div class="select">
-  <mat-form-field appearance="fill">
-    <mat-label>Position type</mat-label>
-    <mat-select [(ngModel)]="selectedType">
-      <mat-option value="All">
-        All
-      </mat-option>
-      <mat-option *ngFor="let type of types" [value]="type.positionTypeName">
-        {{type.positionTypeName}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  </div>
-<div class="select">
-<mat-form-field appearance="fill">
-  <mat-label>Retailer</mat-label>
-  <mat-select [(ngModel)]="selectedRetailer">
-    <mat-option value="All">
-      All
-    </mat-option>
-    <mat-option *ngFor="let retailer of retailers" [value]="retailer.retailerName">
-      {{retailer.retailerName}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-</div>
-<br>
-<form class="example-form">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Object</mat-label>
-    <input type="text"
-           placeholder="Pick one"
-           aria-label="Number"
-           matInput
-           [formControl]="myControl"
-           [matAutocomplete]="auto"
-           [(ngModel)]="selectedObject"
-          >
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option value="All">
-        All
-      </mat-option>
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.objectIdCompany">
-        {{option.objectName}}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-</form>
-<p *ngIf="error">Can't filter object and retailer at the same time.</p>
-<div class="select">
-  <mat-form-field appearance="fill">
-    <mat-label>Object format</mat-label>
-    <mat-select [(ngModel)]="selectedFormat">
-      <mat-option value="All">
-        All
-      </mat-option>
-      <mat-option *ngFor="let format of formats" [value]="format">
-        {{format}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  </div>
+    <div class="select">
+      <mat-form-field appearance="fill">
+        <mat-label>Position type</mat-label>
+        <mat-select [(ngModel)]="selectedType">
+          <mat-option value="All">
+            All
+          </mat-option>
+          <mat-option *ngFor="let type of types" [value]="type.positionTypeName">
+            {{type.positionTypeName}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="select">
+      <mat-form-field appearance="fill">
+        <mat-label>Retailer</mat-label>
+        <mat-select [(ngModel)]="selectedRetailer">
+          <mat-option value="All">
+            All
+          </mat-option>
+          <mat-option *ngFor="let retailer of retailers" [value]="retailer.retailerName">
+            {{retailer.retailerName}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <br>
+    <form class="example-form">
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Object</mat-label>
+        <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
+          [matAutocomplete]="auto" [(ngModel)]="selectedObject">
+        <mat-autocomplete #auto="matAutocomplete">
+          <mat-option value="All">
+            All
+          </mat-option>
+          <mat-option *ngFor="let option of filteredOptions | async" [value]="option.objectIdCompany">
+            {{option.objectName}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+    </form>
+    <p *ngIf="error">Can't filter object and retailer at the same time.</p>
+    <div class="select">
+      <mat-form-field appearance="fill">
+        <mat-label>Object format</mat-label>
+        <mat-select [(ngModel)]="selectedFormat">
+          <mat-option value="All">
+            All
+          </mat-option>
+          <mat-option *ngFor="let format of formats" [value]="format">
+            {{format}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
   </div>
 
 
@@ -118,8 +112,8 @@
   <div class="container">
     <h3 class="uploadHeading " style="color:#56baed;">Products</h3>
     <input type="file" #productFileDropRef (change)="uploadProductsFile($event)" id="productFileDropRef" hidden />
-<br>
-   <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
+    <br>
+    <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
 
     <label for="productFileDropRef" class="browseButton" *ngIf="isProductsEmpty">Browse</label>
     <label class="browseButton" *ngIf="!isProductsEmpty" (click)="exportProducts()">Export</label>
@@ -131,13 +125,13 @@
       <br>
       <label for="download-obj-template">Download template</label>
     </div>
-<br>
+    <br>
     <div *ngIf="isProdLoading"
       style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white; background: transparent;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
     </div>
-    <div class="select">
+    <div class="select" style="margin-left: -240%; margin-top: 18%;">
       <mat-form-field appearance="fill">
         <mat-label>Product category</mat-label>
         <mat-select [(ngModel)]="selectedCategory">
@@ -149,11 +143,11 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-      </div>
+    </div>
   </div>
 
 </div>
 
 <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
-<p class="warning-message"> Warning: Max allowed 1000 rows per Excel file.</p>
+<p class="warning-message" > Warning: Max allowed 1000 rows per Excel file.</p>
