Sredjena uploads komponenta

--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="disableditem resolve-fb fadeIn second">
+  <div class="disableditem resolve-fb fadeIn second" [routerLink]="['/chooseObject/positions']">
     <!-- ENABLE: [routerLink]="['/chooseObject/positions']"-->
     <p>
       <img src="../../../assets/belopoz.png" width="50px" height="50px"
