--- a/src/app/components/uploads/uploads.component.css
+++ b/src/app/components/uploads/uploads.component.css
@@ -57,8 +57,7 @@
 
 .warning-message{
    text-align: center;
-   font-size:20px;
-   margin-top:50%;
+   font-size:15px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -81,4 +80,8 @@
 
 .center{
     text-align:center;
+}
+
+.font{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
