--- a/src/app/components/uploads/uploads.component.css
+++ b/src/app/components/uploads/uploads.component.css
@@ -5,6 +5,8 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
+
 .container {
     width: 450px;
     height: 200px;
@@ -14,6 +16,7 @@
     position: relative;
     margin: 0 auto;
     cursor: pointer;
+    background-color:white;
 }
 
 .uploadHeading {
