--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -23,6 +23,11 @@
             </a>
         </mat-nav-list>
         <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['return-dashboard']">
+                <mat-icon class="nav-icon">dashboard</mat-icon>Return Statistics
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
             <a mat-list-item class="nav-list-item" [routerLink]="['user']">
                 <mat-icon class="nav-icon">supervised_user_circle</mat-icon>Users
             </a>
