Bez spinera izmedju stranica kod admina

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
-
 <div *ngIf="!loading">
   <router-outlet></router-outlet>
 </div>
 <!--display: flex; justify-content: center; align-items: center;-->
-<div *ngIf="loading"
-style="background: white;color:#56baed;margin-top:20%">
-<div><img src="assets\StoreMetrics.jpg" alt="SC icon" width="400" height="200" class="center noresize"></div>
-<mat-progress-spinner class="mat-spinner-color center" mode="indeterminate" [diameter]="20">
-</mat-progress-spinner>
+<div *ngIf="loading" style="background: white;color:#56baed;margin-top:20%">
+  <div><img src="assets\StoreMetrics.jpg" alt="SC icon" width="400" height="200" class="center noresize"></div>
+  <mat-progress-spinner class="mat-spinner-color center" mode="indeterminate" [diameter]="20">
+  </mat-progress-spinner>
 
 </div>
