Fade in za exit dugme na store check stranici

--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -49,7 +49,7 @@
     <div style="justify-content: center;margin-right: 50px;">RETURNS</div>
   </div>
 
-  <button mat-stroked-button color="primary" class="item2 resolve-fb"
+  <button mat-stroked-button color="primary" class="item2 resolve-fb fadeIn third"
     [routerLink]="['/modules']">Exit<mat-icon>exit_to_app</mat-icon></button>
 
   <!--
