Naslov za promo management

--- a/src/app/components/promo/promo.component.css
+++ b/src/app/components/promo/promo.component.css
@@ -1,3 +1,12 @@
+.header {
+    text-align: center;
+    height: 80px;
+    background-color: #56baed;
+    color: #fff;
+    line-height: 80px;
+    font-family: sans-serif;
+}
+
 .mat-header-cell {
     background: #56baed;
 }
