--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -1,3 +1,8 @@
+<div class="header fadeIn first">
+    <img src="../../../assets/Store Metrics Logo PNG.png" alt="SC icon" width="80" height="80" style="float:left;">
+    <h2 style="height:80px;"> <span>Promo Management</span> </h2>
+</div>
+
 <mat-radio-group aria-label="Select an option" (change)="changeType($event)">
     <mat-radio-button value="FOR_CONFIRMATION" checked="true">For confirmation</mat-radio-button>
     <mat-radio-button value="ACTUAL">Actual</mat-radio-button>
