--- a/src/app/components/modules/modules.component.html
+++ b/src/app/components/modules/modules.component.html
@@ -10,8 +10,8 @@
         <div style="justify-content: center;margin-right: 50px;">STORE METRICS</div>
     </div>
 
-    <div class="disableditem resolve-fb fadeIn second">
-        <!-- ENABLE: [routerLink]="['/promo']"-->
+    <div class="item resolve-fb fadeIn second" [routerLink]="['/promo']">
+        <!-- ENABLE: -->
         <p>
             <img src="../../../assets/icons8-price-tag-48.png" width="50px" height="50px"
                 style="margin-top:15px; float:left; margin-left:20px;">
