--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -48,9 +48,11 @@
     </p>
     <div style="justify-content: center;margin-right: 50px;">RETURNS</div>
   </div>
-
-  <button mat-stroked-button color="primary" class="item2 resolve-fb fadeIn third"
+<div>
+  <button mat-stroked-button color="primary" class="item2 resolve-fb fadeIn third center"
     [routerLink]="['/modules']">Exit<mat-icon>exit_to_app</mat-icon></button>
+</div>
+  
 
   <!--
   <button mat-raised-button class="fadeIn" color="primary" color="nortz" (click)="logout()">
