--- a/src/app/components/promo/promo.component.css
+++ b/src/app/components/promo/promo.component.css
@@ -27,3 +27,50 @@
 .mat-radio-button {
     margin: 32px 16px;
 }
+
+.item2 {
+
+    background-color: white;
+    color: #39ace7;
+    width: 130px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 17px;
+    letter-spacing: 0.5px;
+    font-weight: bold;
+    font-family: sans-serif;
+    border: 2px solid #39ace7;
+    cursor: pointer;
+    position: relative;
+    bottom: 1;
+    margin: auto;
+  
+    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+  
+  }
+  
+  .fadeIn.third {
+    -webkit-animation-delay: 0.8s;
+    -moz-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+}
+
+.resolve-fb {
+    margin-top: 30px;
+  }
+
+
+
+  .center {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -30px;
+    margin-top: 50px;
+    width: 80px;
+   
+    align-items: center;
+    justify-content: center;
+  }
