--- a/src/app/components/promo/promo.component.css
+++ b/src/app/components/promo/promo.component.css
@@ -46,12 +46,12 @@
     position: relative;
     bottom: 1;
     margin: auto;
-  
+
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
-  
-  }
-  
-  .fadeIn.third {
+
+}
+
+.fadeIn.third {
     -webkit-animation-delay: 0.8s;
     -moz-animation-delay: 0.8s;
     animation-delay: 0.8s;
@@ -59,18 +59,26 @@
 
 .resolve-fb {
     margin-top: 30px;
-  }
+}
 
 
 
-  .center {
+.center {
     display: flex;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: -30px;
     margin-top: 50px;
     width: 80px;
-   
+
     align-items: center;
     justify-content: center;
-  }
+}
+
+.example-month-picker .mat-calendar-period-button {
+    pointer-events: none;
+}
+
+.example-month-picker .mat-calendar-arrow {
+    display: none;
+}
