--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -28,6 +28,11 @@
             </a>
         </mat-nav-list>
         <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['promo-dashboard']">
+                <mat-icon class="nav-icon">dashboard</mat-icon>Promo Statistics
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
             <a mat-list-item class="nav-list-item" [routerLink]="['user']">
                 <mat-icon class="nav-icon">supervised_user_circle</mat-icon>Users
             </a>
