--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -30,9 +30,9 @@
         <div class="table-section-item">
             <app-object [isDashboard]="true" (selectedObject)="selectObject($event)"></app-object>
         </div>
-        <!-- <div class="table-section-item">
+        <div class="table-section-item">
             <app-product [isDashboard]="true" (selectedProduct)="selectProduct($event)"></app-product>
-        </div> -->
+        </div>
     </div>
 
     <div class="centered div-container">
