--- a/src/app/components/promo/promo.component.css
+++ b/src/app/components/promo/promo.component.css
@@ -82,3 +82,12 @@
 .example-month-picker .mat-calendar-arrow {
     display: none;
 }
+
+.filters {
+    padding: 0 20px;
+    margin: 0 0 20px 0;
+}
+
+.form-field {
+    margin-right: 20px;
+}
