--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -76,7 +76,13 @@
             <ng-container matColumnDef="resultSalePercent">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Result Sale
                     %</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ (row.resultSale * 100 - 100).toFixed(2) }}%</mat-cell>
+                <mat-cell *matCellDef="let row">{{ (row.resultSale / row.regularSale * 100 - 100).toFixed(2)
+                    }}%</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="ropi">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ (row.ropi * 100 - 100).toFixed(2)}}.%</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="actions">
