--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -93,19 +93,19 @@
                 </mat-header-cell>
                 <mat-cell *matCellDef="let row; let i=index">
                     <button mat-stroked-button color="primary" *ngIf="type === 'MY_CONFIRMATION'"
-                        (click)="openDialog(2, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">Confirm
+                        (click)="openDialog(2, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale)">Confirm
                     </button>
                     <button mat-icon-button color="primary"
-                        (click)="openDialog(3, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">
+                        (click)="openDialog(3, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale)">
                         <mat-icon area-label="Delete">delete</mat-icon>
                     </button>
                     <button mat-icon-button color="primary"
                         *ngIf="type === 'FINISHED' && !row.resultSale && calculateDiff(row.dateEnd) >= 3"
-                        (click)="openDialog(4, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">
+                        (click)="openDialog(4, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale)">
                         <mat-icon area-label="Edit">edit</mat-icon>
                     </button>
                     <button mat-icon-button color="primary"
-                        (click)="openDialog(5, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">
+                        (click)="openDialog(5, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.promoSale, row.expenses, row.price, row.resultSale)">
                         <mat-icon area-label="Info">info</mat-icon>
                     </button>
                 </mat-cell>
